--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -1,18 +1,28 @@
 @import "styles/variables";
 
 .nav {
-    // background-color: #141414;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #97979786;
+  padding: 32px 0;
   ul {
     display: flex;
     flex-direction: row;
-    // color: $white;
     li {
-      margin-right: 25px;
+      margin-right: 34px;
       list-style: none;
       a {
         font-size: 1.2rem;
         text-decoration: none;
         color: white;
+        text-transform: uppercase;
+        font-size: 13px;
+        letter-spacing: 2px;
+        font-weight: bold;
+        &:hover {
+          color: #d87d4a;
+        }
       }
     }
   }
