add some component to home page

--- a/client/components/UI/Button/Button.module.scss
+++ b/client/components/UI/Button/Button.module.scss
@@ -3,6 +3,7 @@
   color: #ffffff;
   padding: 15px 30px;
   border: none;
+  text-transform: uppercase;
   cursor: pointer;
   max-width: 160px;
   &:hover {
