--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   border-bottom: 1px solid #97979786;
   padding: 32px 0;
+  background-color: #141414;
   ul {
     display: flex;
     flex-direction: row;
